добавлены методы жизненного цикла создан ConstantManager добавлено логирование добавлены новые цвета добавлены иконки созданы стили сверстан экран главной Activity * реализована прокрутка экрана с помощью NestedScrollView

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,12 +4,14 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <!-- Sizes -->
+    <dimen name="size_smaller_16">16dp</dimen>
     <dimen name="size_small_24">24dp</dimen>
     <dimen name="size_medial_32">32dp</dimen>
     <dimen name="size_medium_56">56dp</dimen>
     <dimen name="size_large_72">72dp</dimen>
     <dimen name="size_larger_80">80dp</dimen>
     <dimen name="size_largest_104">104dp</dimen>
+    <dimen name="line_size">1dp</dimen>
 
     <!-- Spaces -->
     <dimen name="spacing_small_8">8dp</dimen>
@@ -19,4 +21,8 @@
     <dimen name="spacing_large_56">56dp</dimen>
     <dimen name="spacing_larger_72">72dp</dimen>
     <dimen name="spacing_largest_80">80dp</dimen>
+
+    <!-- Fonts -->
+    <dimen name="font_size_small_12">12sp</dimen>
+    <dimen name="font_size_medium_20">20sp</dimen>
 </resources>
