--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,216 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ui.activities.MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"/>
-</RelativeLayout>
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".ui.activities.MainActivity">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/grey"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                style="@style/topLayout"
+                android:layout_marginLeft="@dimen/spacing_normal_16"
+                android:layout_marginRight="@dimen/spacing_normal_16"
+                android:layout_weight="1">
+
+                <TextView
+                    style="@style/topText.dig"/>
+
+                <TextView
+                    style="@style/topText.text"
+                    android:text="@string/rating"/>
+            </LinearLayout>
+
+            <View
+                style="@style/separator_vertical"/>
+
+            <LinearLayout
+                style="@style/topLayout"
+                android:layout_marginLeft="@dimen/spacing_normal_16"
+                android:layout_marginRight="@dimen/spacing_normal_16"
+                android:layout_weight="2">
+
+                <TextView
+                    style="@style/topText.dig"/>
+
+                <TextView
+                    style="@style/topText.text"
+                    android:text="@string/strings_of_code"/>
+            </LinearLayout>
+
+            <View
+                style="@style/separator_vertical"/>
+
+            <LinearLayout
+                style="@style/topLayout"
+                android:layout_marginLeft="@dimen/spacing_normal_16"
+                android:layout_marginRight="@dimen/spacing_normal_16"
+                android:layout_weight="1">
+
+                <TextView
+                    style="@style/topText.dig"/>
+
+                <TextView
+                    style="@style/topText.text"
+                    android:text="@string/count_projects"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/layoutOuter">
+
+            <ImageView
+                style="@style/icon.left"
+                android:src="@drawable/ic_call_black_24dp"/>
+
+            <LinearLayout
+                style="@style/layoutInner"
+                android:layout_height="@dimen/size_large_72">
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        style="@style/edit_text"
+                        android:hint="@string/hint_mobile"
+                        android:inputType="phone"
+                        android:text="@string/mobile_number"/>
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <ImageView
+                style="@style/icon.right"
+                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
+        </LinearLayout>
+
+        <View
+            style="@style/separator"/>
+
+        <LinearLayout
+            style="@style/layoutOuter">
+
+            <ImageView
+                style="@style/icon.left"
+                android:src="@drawable/ic_email_black_24dp"/>
+
+            <LinearLayout
+                style="@style/layoutInner"
+                android:layout_height="@dimen/size_large_72">
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        style="@style/edit_text"
+                        android:hint="@string/hint_email"
+                        android:text="@string/email"/>
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <ImageView
+                style="@style/icon.right"
+                android:src="@drawable/ic_send_black_24dp"/>
+        </LinearLayout>
+
+        <View
+            style="@style/separator"/>
+
+        <LinearLayout
+            style="@style/layoutOuter">
+
+            <ImageView
+                style="@style/icon.left"
+                android:src="@drawable/ic_vk_black_24dp"/>
+
+            <LinearLayout
+                style="@style/layoutInner"
+                android:layout_height="@dimen/size_large_72">
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        style="@style/edit_text"
+                        android:hint="@string/hint_profile"
+                        android:text="@string/vk_profile"/>
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <ImageView
+                style="@style/icon.right"
+                android:src="@drawable/ic_visibility_black_24dp"/>
+        </LinearLayout>
+
+        <View
+            style="@style/separator"/>
+
+        <LinearLayout
+            style="@style/layoutOuter">
+
+            <ImageView
+                style="@style/icon.left"
+                android:src="@drawable/ic_github_black_24dp"/>
+
+            <LinearLayout
+                style="@style/layoutInner"
+                android:layout_height="@dimen/size_large_72">
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        style="@style/edit_text"
+                        android:hint="@string/hint_repo"
+                        android:text="@string/gh_repo"/>
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <ImageView
+                style="@style/icon.right"
+                android:src="@drawable/ic_visibility_black_24dp"/>
+        </LinearLayout>
+
+        <View
+            style="@style/separator"/>
+
+        <LinearLayout
+            style="@style/layoutOuter">
+
+            <ImageView
+                style="@style/icon.left"
+                android:src="@drawable/ic_account_circle_black_24dp"/>
+
+            <LinearLayout
+                style="@style/layoutInner"
+                android:layout_height="@dimen/size_large_72">
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        style="@style/edit_text"
+                        android:hint="@string/hint_about"
+                        android:text="@string/about_myself"/>
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
