--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,216 +1,283 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation_drawer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context=".ui.activities.MainActivity">
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_coordinator_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".ui.activities.MainActivity">
+        android:layout_height="wrap_content">
 
-        <LinearLayout
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/grey"
-            android:orientation="horizontal">
+            android:background="@color/color_primary"
+            android:theme="@style/AppTheme.AppBarOverlay">
+
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:contentScrim="@color/color_primary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <ImageView
+                    android:id="@+id/user_phone_img"
+                    style="@style/user_foto"
+                    android:src="@drawable/andrmix"/>
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    style="@style/toolbar"
+                    android:titleTextColor="@color/color_white"
+                    app:layout_collapseMode="pin"/>
+
+            </android.support.design.widget.CollapsingToolbarLayout>
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <LinearLayout
-                style="@style/topLayout"
-                android:layout_marginLeft="@dimen/spacing_normal_16"
-                android:layout_marginRight="@dimen/spacing_normal_16"
-                android:layout_weight="1">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <TextView
-                    style="@style/topText.dig"/>
-
-                <TextView
-                    style="@style/topText.text"
-                    android:text="@string/rating"/>
-            </LinearLayout>
-
-            <View
-                style="@style/separator_vertical"/>
-
-            <LinearLayout
-                style="@style/topLayout"
-                android:layout_marginLeft="@dimen/spacing_normal_16"
-                android:layout_marginRight="@dimen/spacing_normal_16"
-                android:layout_weight="2">
-
-                <TextView
-                    style="@style/topText.dig"/>
-
-                <TextView
-                    style="@style/topText.text"
-                    android:text="@string/strings_of_code"/>
-            </LinearLayout>
-
-            <View
-                style="@style/separator_vertical"/>
-
-            <LinearLayout
-                style="@style/topLayout"
-                android:layout_marginLeft="@dimen/spacing_normal_16"
-                android:layout_marginRight="@dimen/spacing_normal_16"
-                android:layout_weight="1">
-
-                <TextView
-                    style="@style/topText.dig"/>
-
-                <TextView
-                    style="@style/topText.text"
-                    android:text="@string/count_projects"/>
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/layoutOuter">
-
-            <ImageView
-                style="@style/icon.left"
-                android:src="@drawable/ic_call_black_24dp"/>
-
-            <LinearLayout
-                style="@style/layoutInner"
-                android:layout_height="@dimen/size_large_72">
-
-                <android.support.design.widget.TextInputLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:background="@color/grey"
+                    android:orientation="horizontal">
 
-                    <EditText
-                        style="@style/edit_text"
-                        android:hint="@string/hint_mobile"
-                        android:inputType="phone"
-                        android:text="@string/mobile_number"/>
-                </android.support.design.widget.TextInputLayout>
+                    <LinearLayout
+                        style="@style/topLayout"
+                        android:layout_marginLeft="@dimen/spacing_normal_16"
+                        android:layout_marginRight="@dimen/spacing_normal_16"
+                        android:layout_weight="1">
+
+                        <TextView
+                            style="@style/topText.dig"/>
+
+                        <TextView
+                            style="@style/topText.text"
+                            android:text="@string/rating"/>
+                    </LinearLayout>
+
+                    <View
+                        style="@style/separator_vertical"/>
+
+                    <LinearLayout
+                        style="@style/topLayout"
+                        android:layout_marginLeft="@dimen/spacing_normal_16"
+                        android:layout_marginRight="@dimen/spacing_normal_16"
+                        android:layout_weight="2">
+
+                        <TextView
+                            style="@style/topText.dig"/>
+
+                        <TextView
+                            style="@style/topText.text"
+                            android:text="@string/strings_of_code"/>
+                    </LinearLayout>
+
+                    <View
+                        style="@style/separator_vertical"/>
+
+                    <LinearLayout
+                        style="@style/topLayout"
+                        android:layout_marginLeft="@dimen/spacing_normal_16"
+                        android:layout_marginRight="@dimen/spacing_normal_16"
+                        android:layout_weight="1">
+
+                        <TextView
+                            style="@style/topText.dig"/>
+
+                        <TextView
+                            style="@style/topText.text"
+                            android:text="@string/count_projects"/>
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/layoutOuter">
+
+                    <ImageView
+                        style="@style/icon.left"
+                        android:src="@drawable/ic_call_black_24dp"/>
+
+                    <LinearLayout
+                        style="@style/layoutInner"
+                        android:layout_height="@dimen/size_large_72">
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/user_phone_et"
+                                style="@style/edit_text"
+                                android:hint="@string/hint_mobile"
+                                android:inputType="phone"
+                                android:text="@string/mobile_number"/>
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/call_img"
+                        style="@style/icon.right"
+                        android:src="@drawable/ic_phone_in_talk_black_24dp"/>
+                </LinearLayout>
+
+                <View
+                    style="@style/separator"/>
+
+                <LinearLayout
+                    style="@style/layoutOuter">
+
+                    <ImageView
+                        style="@style/icon.left"
+                        android:src="@drawable/ic_email_black_24dp"/>
+
+                    <LinearLayout
+                        style="@style/layoutInner"
+                        android:layout_height="@dimen/size_large_72">
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/user_email_et"
+                                style="@style/edit_text"
+                                android:hint="@string/hint_email"
+                                android:text="@string/email"/>
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
+
+                    <ImageView
+                        style="@style/icon.right"
+                        android:src="@drawable/ic_send_black_24dp"/>
+                </LinearLayout>
+
+                <View
+                    style="@style/separator"/>
+
+                <LinearLayout
+                    style="@style/layoutOuter">
+
+                    <ImageView
+                        style="@style/icon.left"
+                        android:src="@drawable/ic_vk_black_24dp"/>
+
+                    <LinearLayout
+                        style="@style/layoutInner"
+                        android:layout_height="@dimen/size_large_72">
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/user_vk_et"
+                                style="@style/edit_text"
+                                android:hint="@string/hint_profile"
+                                android:text="@string/vk_profile"/>
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
+
+                    <ImageView
+                        style="@style/icon.right"
+                        android:src="@drawable/ic_visibility_black_24dp"/>
+                </LinearLayout>
+
+                <View
+                    style="@style/separator"/>
+
+                <LinearLayout
+                    style="@style/layoutOuter">
+
+                    <ImageView
+                        style="@style/icon.left"
+                        android:src="@drawable/ic_github_black_24dp"/>
+
+                    <LinearLayout
+                        style="@style/layoutInner"
+                        android:layout_height="@dimen/size_large_72">
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/user_git_et"
+                                style="@style/edit_text"
+                                android:hint="@string/hint_repo"
+                                android:text="@string/gh_repo"/>
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
+
+                    <ImageView
+                        style="@style/icon.right"
+                        android:src="@drawable/ic_visibility_black_24dp"/>
+                </LinearLayout>
+
+                <View
+                    style="@style/separator"/>
+
+                <LinearLayout
+                    style="@style/layoutOuter">
+
+                    <ImageView
+                        style="@style/icon.left"
+                        android:src="@drawable/ic_account_circle_black_24dp"/>
+
+                    <LinearLayout
+                        style="@style/layoutInner"
+                        android:layout_height="@dimen/size_large_72">
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/user_bio_et"
+                                style="@style/edit_text"
+                                android:hint="@string/hint_about"
+                                android:text="@string/about_myself"/>
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
+
             </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
 
-            <ImageView
-                style="@style/icon.right"
-                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
-        </LinearLayout>
+        <android.support.design.widget.FloatingActionButton
+            style="@style/fab"
+            android:id="@+id/fab"
+            app:layout_anchor="@id/appbar_layout"
+            app:layout_anchorGravity="bottom|right"/>
 
-        <View
-            style="@style/separator"/>
+    </android.support.design.widget.CoordinatorLayout>
 
-        <LinearLayout
-            style="@style/layoutOuter">
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/drawer_menu">
 
-            <ImageView
-                style="@style/icon.left"
-                android:src="@drawable/ic_email_black_24dp"/>
+    </android.support.design.widget.NavigationView>
 
-            <LinearLayout
-                style="@style/layoutInner"
-                android:layout_height="@dimen/size_large_72">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        style="@style/edit_text"
-                        android:hint="@string/hint_email"
-                        android:text="@string/email"/>
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
-
-            <ImageView
-                style="@style/icon.right"
-                android:src="@drawable/ic_send_black_24dp"/>
-        </LinearLayout>
-
-        <View
-            style="@style/separator"/>
-
-        <LinearLayout
-            style="@style/layoutOuter">
-
-            <ImageView
-                style="@style/icon.left"
-                android:src="@drawable/ic_vk_black_24dp"/>
-
-            <LinearLayout
-                style="@style/layoutInner"
-                android:layout_height="@dimen/size_large_72">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        style="@style/edit_text"
-                        android:hint="@string/hint_profile"
-                        android:text="@string/vk_profile"/>
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
-
-            <ImageView
-                style="@style/icon.right"
-                android:src="@drawable/ic_visibility_black_24dp"/>
-        </LinearLayout>
-
-        <View
-            style="@style/separator"/>
-
-        <LinearLayout
-            style="@style/layoutOuter">
-
-            <ImageView
-                style="@style/icon.left"
-                android:src="@drawable/ic_github_black_24dp"/>
-
-            <LinearLayout
-                style="@style/layoutInner"
-                android:layout_height="@dimen/size_large_72">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        style="@style/edit_text"
-                        android:hint="@string/hint_repo"
-                        android:text="@string/gh_repo"/>
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
-
-            <ImageView
-                style="@style/icon.right"
-                android:src="@drawable/ic_visibility_black_24dp"/>
-        </LinearLayout>
-
-        <View
-            style="@style/separator"/>
-
-        <LinearLayout
-            style="@style/layoutOuter">
-
-            <ImageView
-                style="@style/icon.left"
-                android:src="@drawable/ic_account_circle_black_24dp"/>
-
-            <LinearLayout
-                style="@style/layoutInner"
-                android:layout_height="@dimen/size_large_72">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        style="@style/edit_text"
-                        android:hint="@string/hint_about"
-                        android:text="@string/about_myself"/>
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
-</android.support.v4.widget.NestedScrollView>
+</android.support.v4.widget.DrawerLayout>
