--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="size_larger_80">80dp</dimen>
     <dimen name="size_largest_104">104dp</dimen>
     <dimen name="line_size">1dp</dimen>
+    <dimen name="avatar_size">60dp</dimen>
 
     <!-- Spaces -->
     <dimen name="spacing_small_8">8dp</dimen>
@@ -21,8 +22,11 @@
     <dimen name="spacing_large_56">56dp</dimen>
     <dimen name="spacing_larger_72">72dp</dimen>
     <dimen name="spacing_largest_80">80dp</dimen>
+    <dimen name="fab_right_space">8dp</dimen>
 
     <!-- Fonts -->
     <dimen name="font_size_small_12">12sp</dimen>
+    <dimen name="font_size_medial_14">14sp</dimen>
     <dimen name="font_size_medium_20">20sp</dimen>
+    <dimen name="profile_image_size">256dp</dimen>
 </resources>
