--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="color_accent">#FF4081</color>
     <color name="grey">#5d5d5d</color>
     <color name="grey_light">#9c9c9c</color>
+    <color name="grey_background">#454545</color>
 
     <!-- basic colors-->
     <color name="color_blue">#0000FF</color>
